fixed skinr page option top spacing on mobile view

--- a/scss/incubator-prograde-alpha-default.scss
+++ b/scss/incubator-prograde-alpha-default.scss
@@ -156,5 +156,11 @@ html {
   }
 }
 
-// CALENDAR
+// SKINR OPTIONS FOR MAIN PAGE
 // =============================================================================
+
+.page-options-spaced-header {
+  .zone-branding-wrapper {
+    margin-top: 2em;
+  }
+}
