--- a/scss/skinr-page-options.scss
+++ b/scss/skinr-page-options.scss
@@ -27,12 +27,6 @@
   }
 }
 
-.page-options-spaced-header {
-  .zone-branding-wrapper {
-    margin-top: 2em;
-  }
-}
-
 .main-block-no-styling .section-content {
   ul.primary {
     border-bottom-width: 1px;
